argo_cd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "argocd-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argo.cluster.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: argocd-server
           port:
             name: https
